--- a/client/src/main/webapp/index.html
+++ b/client/src/main/webapp/index.html
@@ -152,6 +152,28 @@
         </div>
     </div>
     <footer class="navbar navbar-fixed-bottom"></footer>
+    <div id="login-box" class="modal hide">
+        <form name="login" id="login-form">
+            <div id="login-msg"></div>
+            <fieldset>
+                <legend>Login:</legend>
+                <div>
+                    <label for="username" id="username_label">Username</label>
+                    <input name="credential" id="username" type="text" required placeholder="Your username" />
+                </div>
+                <div>
+                    <label for="password" id="password_label">Password</label>
+                    <input name="password" id="password" type="password" required />
+                </div>
+                <div data-role="controlgroup" data-type="horizontal">
+                    <input type="submit" id="login-btn" value="Login" />
+                    <input type="button" name="cancel" id="cancel" value="Cancel"/>
+                </div>
+                <div id="result"></div>
+            </fieldset>
+        </form>
+        <a href="/todo/register.html">Register</a>
+    </div>
 
     <!-- Templates -->
     <script type="text/template" id="task-tmpl">
@@ -242,14 +264,9 @@
     <script>window.jQuery || document.write( '<script src="js/libs/jquery.min.js"><\/script>' )</script>
     <script src="js/libs/bootstrap.min.js"></script>
     <script src="js/libs/lodash.min.js"></script>
-    <script src="js/libs/aerogear.min.js"></script>
+    <script src="js/libs/aerogear.js"></script>
     <script src="js/libs/jquery.miniColors.min.js"></script>
     <script src="js/libs/jquery.maskedinput-1.3.min.js"></script>
-    <!-- Temporary mocking, remove once server side is complete -->
-    <script src="js/libs/jquery.mockjax.js"></script>
-    <script src="js/mocks.js"></script>
-    <!-- End mocking -->
     <script src="js/app.js"></script>
-    <script src="js/security.js"></script>
 </body>
 </html>
